# git-worktree-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
ez_leaf/: __init__.py  __main__.py  cli.py  launchers.py
specs/: ez-leaf.md
tests/: __init__.py  test_cli.py  test_launchers.py  test_worktree.py
wt/: cli.py  launchers.py  worktree.py
