[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-leaf"
version = "0.1.0"
description = "A lightweight Python script to simplify Git worktree management"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
ez-leaf = "ez_leaf.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ez_leaf*"]
exclude = ["specs*"]
